--- a/index.html
+++ b/index.html
@@ -85,57 +85,95 @@
         </div>
         <div class="skill ds-f-c">
             <div class="sub-skill d-ib">
-                <div class="diploma d-ib">
-                    <div class="diplomaOne">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="diplomaTwo hidden">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="diplomaThree hidden">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="arrow d-ib">
-                        <img class="arrowImg" src="img/fleche-bas.png">
-                    </div>
-                </div>
+                <!--<div class="diploma d-ib">-->
+                    <!--<div class="diplomaOne">-->
+                        <!--<img src="img/logo-imie.png">-->
+                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
+                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
+                        <!--<p class="d-ib date">En cours</p>-->
+                    <!--</div>-->
+                    <!--<div class="diplomaTwo hidden">-->
+                        <!--<img src="img/logo-imie.png">-->
+                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
+                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
+                        <!--<p class="d-ib date">En cours</p>-->
+                    <!--</div>-->
+                    <!--<div class="diplomaThree hidden">-->
+                        <!--<img src="img/logo-imie.png">-->
+                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
+                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
+                        <!--<p class="d-ib date">En cours</p>-->
+                    <!--</div>-->
+                    <!--<div class="arrow d-ib">-->
+                        <!--<img class="arrowImg" src="img/fleche-bas.png">-->
+                    <!--</div>-->
+                <!--</div>-->
 
-                <div class="skillDev d-ib">
-                    <div class="mrg-top-20-px">
-                        <div class="progress">
-                            <canvas id="subBar1" width="110" height="110"></canvas>
-                            <img class="img-logo" src="img/HTML5_Logo_512.png">
-                            <canvas id="bar1" width="110" height="110"></canvas>
+                <div class="skillDev ft-L">
+                    <div class="skillDevSoft ft-L">
+                        <h1>Développement Logiciels</h1>
+                        <h2>IHM</h2>
+                        <div class="mrg-top-20-px">
+                            <div class="progress">
+                                <canvas id="subBar1" width="110" height="110"></canvas>
+                                <img class="img-logo" src="img/HTML5_Logo_512.png">
+                                <canvas id="bar1" width="110" height="110"></canvas>
+                            </div>
+                            <div class="progress">
+                                <canvas id="subBar2" width="110" height="110"></canvas>
+                                <img class="img-logo" src="img/symfony_logo.png">
+                                <canvas id="bar2" width="110" height="110"></canvas>
+                            </div>
+                            <div class="progress">
+                                <canvas id="subBar3" width="110" height="110"></canvas>
+                                <img class="img-logo" src="img/PHP-logo.png">
+                                <canvas id="bar3" width="110" height="110"></canvas>
+                            </div>
+                            <div class="progress">
+                                <canvas id="subBar4" width="110" height="110"></canvas>
+                                <img class="img-logo" src="img/logo_javascript.png">
+                                <canvas id="bar4" width="110" height="110"></canvas>
+                            </div>
+                            <div class="progress">
+                                <canvas id="subBar5" width="110" height="110"></canvas>
+                                <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
+                                <canvas id="bar5" width="110" height="110"></canvas>
+                            </div>
                         </div>
-                        <div class="progress">
-                            <canvas id="subBar2" width="110" height="110"></canvas>
-                            <img class="img-logo" src="img/symfony_logo.png">
-                            <canvas id="bar2" width="110" height="110"></canvas>
-                        </div>
-                        <div class="progress">
-                            <canvas id="subBar3" width="110" height="110"></canvas>
-                            <img class="img-logo" src="img/PHP-logo.png">
-                            <canvas id="bar3" width="110" height="110"></canvas>
-                        </div>
-                        <div class="progress">
-                            <canvas id="subBar4" width="110" height="110"></canvas>
-                            <img class="img-logo" src="img/logo_javascript.png">
-                            <canvas id="bar4" width="110" height="110"></canvas>
-                        </div>
-                        <div class="progress">
-                            <canvas id="subBar5" width="110" height="110"></canvas>
-                            <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
-                            <canvas id="bar5" width="110" height="110"></canvas>
-                        </div>
+                    </div>
+                        <!--<label>IHM</label>CSS3, HTML5, Responsive-->
+<!---->
+                    <!--Langages : JavaScript, Ajax, PHP, JQUERY-->
+<!---->
+                    <!--Framework : MVC, Webapp, Symphony-->
+<!---->
+                    <!--Base de données : SQL, Postgre SQL-->
+<!---->
+                    <!--Méthodologie : Merise, POO, UML-->
+<!---->
+                    <!--IDE : PHPstrom, NetBeans (sublimeText)-->
+<!---->
+                    <!--Application CMS et e-commerce :-->
+<!---->
+                    <!--WordPress, Prestashop, PhoneGap-->
+                    <div class="skillDevLan ft-R">
+                        <h1>Network Competence</h1>
+                        <h2>Reseau :</h2>
+                            <p>TCP/IP, DHCP, DNS, Routage</p>
+                        <h2>OS :</h2>
+                            <p>Windows, Linux, Mac OS</p>
+                        <h2>Virtualisation :</h2>
+                            <p>VMWare, VirtualBox</p>
+                        <h2>Hardware :</h2>
+                            <p>Composant, configuration, montage</p>
+                        <h2>Assistance :</h2>
+                            <p>GLPT/OCS, ITIC</p>
+
+                        <h1>Project Competence</h1>
+                        <h2>Analyse du besoin :</h2>
+                            <p>CDC, CDCF, WBS, PERT, GANTT</p>
+                        <h2>Maquettage</h2>
+                            <p>Photoshop, InDesign</p>
                     </div>
                 </div>
             </div>
@@ -144,7 +182,6 @@
     </body>
     <script type="text/javascript" src="stylesheet/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="stylesheet/jauge.js"></script>
-    <script type="text/javascript" src="stylesheet/jquery.rotate.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
 
 </html>
