--- a/index.html
+++ b/index.html
@@ -85,29 +85,29 @@
         </div>
         <div class="skill ds-f-c">
             <div class="sub-skill d-ib">
-                <!--<div class="diploma d-ib">-->
-                    <!--<div class="diplomaOne">-->
-                        <!--<img src="img/logo-imie.png">-->
-                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
-                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
-                        <!--<p class="d-ib date">En cours</p>-->
-                    <!--</div>-->
-                    <!--<div class="diplomaTwo hidden">-->
-                        <!--<img src="img/logo-imie.png">-->
-                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
-                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
-                        <!--<p class="d-ib date">En cours</p>-->
-                    <!--</div>-->
-                    <!--<div class="diplomaThree hidden">-->
-                        <!--<img src="img/logo-imie.png">-->
-                        <!--<h1 class="d-ib">Bac +4 niveau 2</h1>-->
-                        <!--<p class="d-ib ">Concepteur developpeur</p>-->
-                        <!--<p class="d-ib date">En cours</p>-->
-                    <!--</div>-->
-                    <!--<div class="arrow d-ib">-->
-                        <!--<img class="arrowImg" src="img/fleche-bas.png">-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="diploma d-ib">
+                    <div class="diplomaOne">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
+                    </div>
+                    <div class="diplomaTwo hidden">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
+                    </div>
+                    <div class="diplomaThree hidden">
+                        <img src="img/logo-imie.png">
+                        <h1 class="d-ib">Bac +4 niveau 2</h1>
+                        <p class="d-ib ">Concepteur developpeur</p>
+                        <p class="d-ib date">En cours</p>
+                    </div>
+                    <div class="arrow d-ib">
+                        <img class="arrowImg" src="img/fleche-bas.png">
+                    </div>
+                </div>
 
                 <div class="skillDev ft-L">
                     <div class="skillDevSoft ft-L">
