--- a/index.html
+++ b/index.html
@@ -84,33 +84,31 @@
             </div>
         </div>
         <div class="skill ds-f-c">
-            <div class="sub-skill d-ib">
-                <div class="diploma d-ib">
-                    <div class="diplomaOne">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="diplomaTwo hidden">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="diplomaThree hidden">
-                        <img src="img/logo-imie.png">
-                        <h1 class="d-ib">Bac +4 niveau 2</h1>
-                        <p class="d-ib ">Concepteur developpeur</p>
-                        <p class="d-ib date">En cours</p>
-                    </div>
-                    <div class="arrow d-ib">
-                        <img class="arrowImg" src="img/fleche-bas.png">
+            <div class="book">
+                <div style="background-color: #433e3b">
+                    <div class="diploma d-ib">
+                        <div class="diplomaOne">
+                            <img src="img/logo-imie.png">
+                            <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <p class="d-ib ">Concepteur developpeur</p>
+                            <p class="d-ib date">En cours</p>
+                        </div>
+                        <div class="diplomaTwo hidden">
+                            <img src="img/logo-imie.png">
+                            <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <p class="d-ib ">Concepteur developpeur</p>
+                            <p class="d-ib date">En cours</p>
+                        </div>
+                        <div class="diplomaThree hidden">
+                            <img src="img/logo-imie.png">
+                            <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <p class="d-ib ">Concepteur developpeur</p>
+                            <p class="d-ib date">En cours</p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="skillDev ft-L">
-                    <div class="skillDevSoft ft-L">
+                <div style="background-color: #433e3b">
+                    <div class="skillDevSoft">
                         <h1>Développement Logiciels</h1>
                         <h2>IHM</h2>
                         <div class="mrg-top-20-px">
@@ -141,40 +139,53 @@
                             </div>
                         </div>
                     </div>
-                        <!--<label>IHM</label>CSS3, HTML5, Responsive-->
-<!---->
-                    <!--Langages : JavaScript, Ajax, PHP, JQUERY-->
-<!---->
-                    <!--Framework : MVC, Webapp, Symphony-->
-<!---->
-                    <!--Base de données : SQL, Postgre SQL-->
-<!---->
-                    <!--Méthodologie : Merise, POO, UML-->
-<!---->
-                    <!--IDE : PHPstrom, NetBeans (sublimeText)-->
-<!---->
-                    <!--Application CMS et e-commerce :-->
-<!---->
-                    <!--WordPress, Prestashop, PhoneGap-->
-                    <div class="skillDevLan ft-R">
+                </div>
+                <div style="background-color: #433e3b">
+                    <h2>IHM :</h2>
+                    <p>CSS3, HTML5, Responsive</p>
+
+                    <h2>Langages :</h2>
+                    <p>JavaScript, Ajax, PHP, JQUERY</p>
+
+                    <h2>Framework :</h2>
+                    <p>MVC, Webapp, Symphony</p>
+
+                    <h2>Base de données :</h2>
+                    <p>SQL, Postgre SQL</p>
+
+                    <h2>Méthodologie :</h2> <p>Merise, POO, UML</p>
+
+                    <h2>IDE :</h2> <p>PHPstrom, NetBeans (sublimeText)</p>
+
+                    <h2>Application CMS et e-commerce :</h2>
+
+                    <p>WordPress, Prestashop, PhoneGap</p>
+                </div>
+                <div style="background-color: #433e3b">
+                    <div class="skillDevLan">
                         <h1>Network Competence</h1>
                         <h2>Reseau :</h2>
-                            <p>TCP/IP, DHCP, DNS, Routage</p>
+                        <p>TCP/IP, DHCP, DNS, Routage</p>
                         <h2>OS :</h2>
-                            <p>Windows, Linux, Mac OS</p>
+                        <p>Windows, Linux, Mac OS</p>
                         <h2>Virtualisation :</h2>
-                            <p>VMWare, VirtualBox</p>
+                        <p>VMWare, VirtualBox</p>
                         <h2>Hardware :</h2>
-                            <p>Composant, configuration, montage</p>
+                        <p>Composant, configuration, montage</p>
                         <h2>Assistance :</h2>
-                            <p>GLPT/OCS, ITIC</p>
-
+                        <p>GLPT/OCS, ITIC</p>
+                    </div>
+                </div>
+                <div style="background-color: #433e3b">
+                    <div class="skillDevLan">
                         <h1>Project Competence</h1>
                         <h2>Analyse du besoin :</h2>
-                            <p>CDC, CDCF, WBS, PERT, GANTT</p>
+                        <p>CDC, CDCF, WBS, PERT, GANTT</p>
                         <h2>Maquettage</h2>
-                            <p>Photoshop, InDesign</p>
+                        <p>Photoshop, InDesign</p>
                     </div>
+                </div>
+            </div>
                 </div>
             </div>
         </div>
@@ -182,6 +193,7 @@
     </body>
     <script type="text/javascript" src="stylesheet/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="stylesheet/jauge.js"></script>
+    <script src="stylesheet/turnjs4/lib/turn.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
 
 </html>
