--- a/index.html
+++ b/index.html
@@ -85,29 +85,39 @@
         </div>
         <div class="skill ds-f-c">
             <div class="book">
-                <div style="background-color: #433e3b">
-                    <div class="diploma d-ib">
+                <div style="background-color: #d6d6d6">
+                    <div class="diploma">
                         <div class="diplomaOne">
                             <img src="img/logo-imie.png">
                             <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <p class="d-ib ">Imie</p>
                             <p class="d-ib ">Concepteur developpeur</p>
                             <p class="d-ib date">En cours</p>
                         </div>
-                        <div class="diplomaTwo hidden">
+                        <div class="diplomaTwo">
                             <img src="img/logo-imie.png">
-                            <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <h1 class="d-ib">Bac +2 niveau 3</h1>
+                            <p class="d-ib ">Imie</p>
                             <p class="d-ib ">Concepteur developpeur</p>
-                            <p class="d-ib date">En cours</p>
+                            <p class="d-ib date">2015</p>
                         </div>
-                        <div class="diplomaThree hidden">
+                        <div class="diplomaThree">
+                            <img src="img/logo-livet.png">
+                            <h1 class="d-ib">Bac STI</h1>
+                            <p class="d-ib ">Livet</p>
+                            <p class="d-ib ">Electronique</p>
+                            <p class="d-ib date">2012</p>
+                        </div>
+                        <div class="diplomaFour">
                             <img src="img/logo-imie.png">
-                            <h1 class="d-ib">Bac +4 niveau 2</h1>
+                            <h1 class="d-ib">BEP</h1>
+                            <p class="d-ib ">Francois Arago</p>
                             <p class="d-ib ">Concepteur developpeur</p>
                             <p class="d-ib date">En cours</p>
                         </div>
                     </div>
                 </div>
-                <div style="background-color: #433e3b">
+                <div style="background-color: #d6d6d6">
                     <div class="skillDevSoft">
                         <h1>Développement Logiciels</h1>
                         <h2>IHM</h2>
@@ -140,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-color: #433e3b">
+                <div style="background-color: #d6d6d6">
                     <h2>IHM :</h2>
                     <p>CSS3, HTML5, Responsive</p>
 
@@ -161,7 +171,7 @@
 
                     <p>WordPress, Prestashop, PhoneGap</p>
                 </div>
-                <div style="background-color: #433e3b">
+                <div style="background-color: #d6d6d6">
                     <div class="skillDevLan">
                         <h1>Network Competence</h1>
                         <h2>Reseau :</h2>
@@ -176,7 +186,7 @@
                         <p>GLPT/OCS, ITIC</p>
                     </div>
                 </div>
-                <div style="background-color: #433e3b">
+                <div style="background-color: #d6d6d6">
                     <div class="skillDevLan">
                         <h1>Project Competence</h1>
                         <h2>Analyse du besoin :</h2>
