--- a/index.html
+++ b/index.html
@@ -84,126 +84,157 @@
             </div>
         </div>
         <div class="skill ds-f-c">
-            <div class="book">
-                <div style="background-color: #d6d6d6">
-                    <div class="diploma">
-                        <div class="diplomaOne">
-                            <img src="img/logo-imie.png">
-                            <h1 class="d-ib">Bac +4 niveau 2</h1>
-                            <p class="d-ib ">Imie</p>
-                            <p class="d-ib ">Concepteur developpeur</p>
-                            <p class="d-ib date">En cours</p>
-                        </div>
-                        <div class="diplomaTwo">
-                            <img src="img/logo-imie.png">
-                            <h1 class="d-ib">Bac +2 niveau 3</h1>
-                            <p class="d-ib ">Imie</p>
-                            <p class="d-ib ">Concepteur developpeur</p>
-                            <p class="d-ib date">2015</p>
-                        </div>
-                        <div class="diplomaThree">
-                            <img src="img/logo-livet.png">
-                            <h1 class="d-ib">Bac STI</h1>
-                            <p class="d-ib ">Livet</p>
-                            <p class="d-ib ">Electronique</p>
-                            <p class="d-ib date">2012</p>
-                        </div>
-                        <div class="diplomaFour">
-                            <img src="img/logo-imie.png">
-                            <h1 class="d-ib">BEP</h1>
-                            <p class="d-ib ">Francois Arago</p>
-                            <p class="d-ib ">Concepteur developpeur</p>
-                            <p class="d-ib date">En cours</p>
-                        </div>
-                    </div>
-                </div>
-                <div style="background-color: #d6d6d6">
-                    <div class="skillDevSoft">
-                        <h1>Développement Logiciels</h1>
-                        <h2>IHM</h2>
-                        <div class="mrg-top-20-px">
-                            <div class="progress">
-                                <canvas id="subBar1" width="110" height="110"></canvas>
-                                <img class="img-logo" src="img/HTML5_Logo_512.png">
-                                <canvas id="bar1" width="110" height="110"></canvas>
-                            </div>
-                            <div class="progress">
-                                <canvas id="subBar2" width="110" height="110"></canvas>
-                                <img class="img-logo" src="img/symfony_logo.png">
-                                <canvas id="bar2" width="110" height="110"></canvas>
-                            </div>
-                            <div class="progress">
-                                <canvas id="subBar3" width="110" height="110"></canvas>
-                                <img class="img-logo" src="img/PHP-logo.png">
-                                <canvas id="bar3" width="110" height="110"></canvas>
-                            </div>
-                            <div class="progress">
-                                <canvas id="subBar4" width="110" height="110"></canvas>
-                                <img class="img-logo" src="img/logo_javascript.png">
-                                <canvas id="bar4" width="110" height="110"></canvas>
-                            </div>
-                            <div class="progress">
-                                <canvas id="subBar5" width="110" height="110"></canvas>
-                                <img class="img-logo" src="img/l12866-java-eps-logo-99090.png">
-                                <canvas id="bar5" width="110" height="110"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div style="background-color: #d6d6d6">
-                    <h2>IHM :</h2>
-                    <p>CSS3, HTML5, Responsive</p>
+            <!--<div id="flipbook" class="book">-->
+            <!--<div class="hard"> <div style="width: 100%; height: 30%"></div><div style="width: 100%; height: 40%; background-color: #919191"><p style="width: 400px; margin-left: auto; margin-right: auto; font-size: 70px">Compétence</p></div><div style="width: 100%; height: 30%"></div></div>-->
+            <!--<div class="hard" style="background-color: #919191"></div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<h1>Sommaire</h1>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<ul>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<li>Diplome</li>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<li>Compétence developpement </li>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<li>Compétence Réseaux</li>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<li>Compétence Projets</li>&ndash;&gt;-->
+                    <!--</ul>-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<div class="diploma ">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="diplomaOne">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<img src="img/logo-imie.png">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<h1 class="d-ib">Bac +4 niveau 2</h1>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Imie</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Concepteur developpeur</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib date">En cours</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="diplomaTwo">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<img src="img/logo-imie.png">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<h1 class="d-ib">Bac +2 niveau 3</h1>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Imie</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Concepteur developpeur</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib date">2015</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<div class="diploma">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="diplomaThree">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<img src="img/logo-livet.png">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<h1 class="d-ib">Bac STI</h1>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Livet</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Electronique</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib date">2012</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="diplomaFour">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<img src="img/logo-imie.png">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<h1 class="d-ib">BEP</h1>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Francois Arago</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib ">Concepteur developpeur</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="d-ib date">En cours</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<div class="skillDevSoft">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h1>Développement Logiciels</h1>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>IHM</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="mrg-top-20-px">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="subBar1" width="110" height="110"></canvas>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<img class="img-logo" src="img/HTML5_Logo_512.png">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="bar1" width="110" height="110"></canvas>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="subBar2" width="110" height="110"></canvas>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<img class="img-logo" src="img/symfony_logo.png">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="bar2" width="110" height="110"></canvas>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="subBar3" width="110" height="110"></canvas>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<img class="img-logo" src="img/PHP-logo.png">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="bar3" width="110" height="110"></canvas>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="subBar4" width="110" height="110"></canvas>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<img class="img-logo" src="img/logo_javascript.png">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="bar4" width="110" height="110"></canvas>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<div class="progress">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="subBar5" width="110" height="110"></canvas>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<img class="img-logo" src="img/l12866-java-eps-logo-99090.png">&ndash;&gt;-->
+                                <!--&lt;!&ndash;<canvas id="bar5" width="110" height="110"></canvas>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<h2>IHM :</h2>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<p>CSS3, HTML5, Responsive</p>&ndash;&gt;-->
 
-                    <h2>Langages :</h2>
-                    <p>JavaScript, Ajax, PHP, JQUERY</p>
+                    <!--&lt;!&ndash;<h2>Langages :</h2>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<p>JavaScript, Ajax, PHP, JQUERY</p>&ndash;&gt;-->
 
-                    <h2>Framework :</h2>
-                    <p>MVC, Webapp, Symphony</p>
+                    <!--&lt;!&ndash;<h2>Framework :</h2>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<p>MVC, Webapp, Symphony</p>&ndash;&gt;-->
 
-                    <h2>Base de données :</h2>
-                    <p>SQL, Postgre SQL</p>
+                    <!--&lt;!&ndash;<h2>Base de données :</h2>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<p>SQL, Postgre SQL</p>&ndash;&gt;-->
 
-                    <h2>Méthodologie :</h2> <p>Merise, POO, UML</p>
+                    <!--&lt;!&ndash;<h2>Méthodologie :</h2> <p>Merise, POO, UML</p>&ndash;&gt;-->
 
-                    <h2>IDE :</h2> <p>PHPstrom, NetBeans (sublimeText)</p>
+                    <!--&lt;!&ndash;<h2>IDE :</h2> <p>PHPstrom, NetBeans (sublimeText)</p>&ndash;&gt;-->
 
-                    <h2>Application CMS et e-commerce :</h2>
+                    <!--&lt;!&ndash;<h2>Application CMS et e-commerce :</h2>&ndash;&gt;-->
 
-                    <p>WordPress, Prestashop, PhoneGap</p>
-                </div>
-                <div style="background-color: #d6d6d6">
-                    <div class="skillDevLan">
-                        <h1>Network Competence</h1>
-                        <h2>Reseau :</h2>
-                        <p>TCP/IP, DHCP, DNS, Routage</p>
-                        <h2>OS :</h2>
-                        <p>Windows, Linux, Mac OS</p>
-                        <h2>Virtualisation :</h2>
-                        <p>VMWare, VirtualBox</p>
-                        <h2>Hardware :</h2>
-                        <p>Composant, configuration, montage</p>
-                        <h2>Assistance :</h2>
-                        <p>GLPT/OCS, ITIC</p>
-                    </div>
-                </div>
-                <div style="background-color: #d6d6d6">
-                    <div class="skillDevLan">
-                        <h1>Project Competence</h1>
-                        <h2>Analyse du besoin :</h2>
-                        <p>CDC, CDCF, WBS, PERT, GANTT</p>
-                        <h2>Maquettage</h2>
-                        <p>Photoshop, InDesign</p>
-                    </div>
-                </div>
-            </div>
-                </div>
-            </div>
+                    <!--&lt;!&ndash;<p>WordPress, Prestashop, PhoneGap</p>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<div class="skillDevLan">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h1>Network Competence</h1>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Reseau :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>TCP/IP, DHCP, DNS, Routage</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>OS :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>Windows, Linux, Mac OS</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Virtualisation :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>VMWare, VirtualBox</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Hardware :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>Composant, configuration, montage</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Assistance :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>GLPT/OCS, ITIC</p>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #d6d6d6">-->
+                    <!--&lt;!&ndash;<div class="skillDevLan">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h1>Project Competence</h1>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Analyse du besoin :</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>CDC, CDCF, WBS, PERT, GANTT</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<h2>Maquettage</h2>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<p>Photoshop, InDesign</p>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--</div>-->
+                <!--<div class="page" style="background-color: #919191"></div>-->
+                <!--<div class="hard" style="background-color: #919191"></div>-->
+                <!---->
+            <!--</div>-->
         </div>
+
+        <div id="flipbook">
+            <div class="hard"> Turn.js </div>
+            <div class="hard"></div>
+            <div class="page"> Page 1 </div>
+            <div class="page" > Page 2 </div>
+            <div class="page" > Page 3 </div>
+            <div class="page" > Page 4 </div>
+            <div class="page" > Page 5 </div>
+            <div class="hard"></div>
+            <div class="hard"></div>
+        </div>
+
+
     <div class="hobby"></div>
     </body>
     <script type="text/javascript" src="stylesheet/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="stylesheet/jauge.js"></script>
+    <script type="text/javascript" src="stylesheet/turnjs4/extras/jquery-ui-1.8.20.custom.min.js"></script>
+    <script type="text/javascript" src="stylesheet/turnjs4/extras/modernizr.2.5.3.min.js"></script>
     <script src="stylesheet/turnjs4/lib/turn.js"></script>
     <script type="text/javascript" src="jsFile.js"></script>
-
 </html>
